--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@mui/icons-material": "^5.10.9",
         "@mui/material": "^5.10.9",
+        "@react-oauth/google": "^0.11.0",
         "@reduxjs/toolkit": "^1.9.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
@@ -20,6 +21,7 @@
         "bootstrap": "^4.6.2",
         "firebase": "^9.10.0",
         "jquery": "^3.6.1",
+        "jwt-decode": "^3.1.2",
         "material-ui-popup-state": "^5.0.4",
         "mysql": "^2.18.1",
         "prop-types": "^15.8.1",
@@ -27,6 +29,7 @@
         "react": "^18.2.0",
         "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
+        "react-google-login": "^5.2.2",
         "react-hook-form": "^7.38.0",
         "react-onscroll": "^1.0.4",
         "react-paginate": "^8.1.3",
