--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "projekt",
+    "name": "project",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -20,10 +20,12 @@
         "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^4.6.2",
         "firebase": "^9.10.0",
+        "framer-motion": "^10.12.16",
         "jquery": "^3.6.1",
         "jwt-decode": "^3.1.2",
         "material-ui-popup-state": "^5.0.4",
         "mysql": "^2.18.1",
+        "nodemailer": "^6.9.3",
         "prop-types": "^15.8.1",
         "query-string": "^7.1.1",
         "react": "^18.2.0",
@@ -43,6 +45,7 @@
         "redux-thunk": "^2.4.2",
         "sass": "^1.54.8",
         "scss": "^0.2.4",
+        "stream": "^0.0.2",
         "styled-components": "^5.3.8",
         "toastify": "^2.0.1",
         "uuid": "^9.0.0",
