--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
+        "react-scroll-motion": "^0.3.2",
         "react-simple-typewriter": "^5.0.1",
         "react-toastify": "^9.0.8",
         "redirect": "^0.2.0",
