--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-google-login": "^5.2.2",
         "react-hook-form": "^7.38.0",
         "react-onscroll": "^1.0.4",
+        "react-page-scroll-progress-bar": "^3.0.1",
         "react-paginate": "^8.1.3",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.1",
