--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
         "react-paginate": "^8.1.3",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.1",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "react-scroll-motion": "^0.3.2",
         "react-simple-typewriter": "^5.0.1",
-        "react-toastify": "^9.0.8",
+        "react-toastify": "^9.1.3",
         "redirect": "^0.2.0",
         "redux": "^4.2.0",
         "redux-thunk": "^2.4.2",
@@ -53,7 +53,8 @@
         "uuid": "^9.0.0",
         "v4": "^0.0.1",
         "v5": "^0.1.2",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "workbox-cli": "^7.0.0"
     },
     "scripts": {
         "start": "set PORT=3002 && react-scripts start",
