--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "devStart": "nodemon server.js",
         "start": "node server.js"
     },
     "author": "",
@@ -14,6 +14,8 @@
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "express-graphql": "^0.12.0",
+        "graphql": "^15.8.0",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.22"
     }
