--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^3.7.15",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -16,11 +17,14 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "aos": "^2.3.4",
         "axios": "^0.27.2",
         "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^4.6.2",
         "firebase": "^9.10.0",
         "framer-motion": "^10.12.16",
+        "graphql": "^16.6.0",
+        "graphql-tag": "^2.12.6",
         "jquery": "^3.6.1",
         "jwt-decode": "^3.1.2",
         "material-ui-popup-state": "^5.0.4",
@@ -29,6 +33,7 @@
         "prop-types": "^15.8.1",
         "query-string": "^7.1.1",
         "react": "^18.2.0",
+        "react-apollo": "^3.1.5",
         "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
         "react-google-login": "^5.2.2",
