--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-dom": "^18.2.0",
         "react-google-login": "^5.2.2",
         "react-hook-form": "^7.38.0",
+        "react-icons": "^4.10.1",
         "react-onscroll": "^1.0.4",
         "react-page-scroll-progress-bar": "^3.0.1",
         "react-paginate": "^8.1.3",
