--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "@tippyjs/react": "^4.2.6",
         "aos": "^2.3.4",
         "axios": "^0.27.2",
         "babel-plugin-macros": "^3.1.0",
@@ -36,23 +37,30 @@
         "react-apollo": "^3.1.5",
         "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
+        "react-elastic-carousel": "^0.11.5",
         "react-google-login": "^5.2.2",
         "react-hook-form": "^7.38.0",
         "react-icons": "^4.10.1",
+        "react-modal": "^3.16.1",
+        "react-multi-carousel": "^2.8.4",
         "react-onscroll": "^1.0.4",
         "react-page-scroll-progress-bar": "^3.0.1",
         "react-paginate": "^8.1.3",
+        "react-query": "^3.39.3",
+        "react-query-devtools": "^2.6.3",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.1",
         "react-scripts": "^5.0.1",
         "react-scroll-motion": "^0.3.2",
         "react-simple-typewriter": "^5.0.1",
+        "react-slick": "^0.29.0",
         "react-toastify": "^9.1.3",
         "redirect": "^0.2.0",
         "redux": "^4.2.0",
         "redux-thunk": "^2.4.2",
         "sass": "^1.54.8",
         "scss": "^0.2.4",
+        "slick-carousel": "^1.8.1",
         "stream": "^0.0.2",
         "styled-components": "^5.3.8",
         "toastify": "^2.0.1",
