--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,8 @@
         "express": "^4.18.2",
         "express-graphql": "^0.12.0",
         "graphql": "^15.8.0",
+        "mongodb": "^5.7.0",
+        "mongoose": "^7.4.3",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.22"
     }
