--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 const MONGODB_URI = "mongodb+srv://root111:2gN2vBVngSYwcWzr@cluster0.rie8oh2.mongodb.net/?retryWrites=true&w=majority"
+const port = 3003
