--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,10 @@
         "mongodb": "^5.7.0",
         "mongoose": "^7.4.3",
         "mysql": "^2.18.1",
-        "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22",
+        "random-token": "^0.0.8"
+    },
+    "devDependencies": {
+        "dotenv-webpack": "^8.0.1"
     }
 }
