--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^0.27.2",
         "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^4.6.2",
+        "dotenv": "^16.3.1",
         "firebase": "^9.10.0",
         "framer-motion": "^10.12.16",
         "graphql": "^16.6.0",
@@ -33,6 +34,7 @@
         "nodemailer": "^6.9.3",
         "prop-types": "^15.8.1",
         "query-string": "^7.1.1",
+        "random-token": "^0.0.8",
         "react": "^18.2.0",
         "react-apollo": "^3.1.5",
         "react-bootstrap": "^2.5.0",
@@ -58,6 +60,7 @@
         "redirect": "^0.2.0",
         "redux": "^4.2.0",
         "redux-thunk": "^2.4.2",
+        "resend": "^1.0.0",
         "sass": "^1.54.8",
         "scss": "^0.2.4",
         "slick-carousel": "^1.8.1",
@@ -95,6 +98,8 @@
         ]
     },
     "devDependencies": {
+        "@types/node": "^20.5.6",
+        "dotenv-webpack": "^8.0.1",
         "tailwindcss": "^3.1.8"
     }
 }
