--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "graphql": "^16.6.0",
         "graphql-tag": "^2.12.6",
         "jquery": "^3.6.1",
+        "jsonwebtoken": "^9.0.1",
         "jwt-decode": "^3.1.2",
         "material-ui-popup-state": "^5.0.4",
         "mysql": "^2.18.1",
