--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "framer-motion": "^10.12.16",
         "graphql": "^16.6.0",
         "graphql-tag": "^2.12.6",
+        "i18next": "^23.5.1",
         "jquery": "^3.6.1",
         "jsonwebtoken": "^9.0.1",
         "jwt-decode": "^3.1.2",
@@ -43,6 +44,7 @@
         "react-elastic-carousel": "^0.11.5",
         "react-google-login": "^5.2.2",
         "react-hook-form": "^7.38.0",
+        "react-i18next": "^13.2.2",
         "react-icons": "^4.10.1",
         "react-modal": "^3.16.1",
         "react-multi-carousel": "^2.8.4",
