--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
         "react-modal": "^3.16.1",
         "react-multi-carousel": "^2.8.4",
         "react-onscroll": "^1.0.4",
-        "react-page-scroll-progress-bar": "^3.0.1",
         "react-paginate": "^8.1.3",
         "react-query": "^3.39.3",
         "react-query-devtools": "^2.6.3",
@@ -57,6 +56,7 @@
         "react-router-dom": "^6.4.1",
         "react-scripts": "^5.0.1",
         "react-scroll-motion": "^0.3.2",
+        "react-scroll-progress-bar": "^1.1.13",
         "react-simple-typewriter": "^5.0.1",
         "react-slick": "^0.29.0",
         "react-toastify": "^9.1.3",
@@ -101,8 +101,13 @@
         ]
     },
     "devDependencies": {
+        "@babel/core": "^7.22.20",
+        "@babel/preset-env": "^7.22.20",
+        "@babel/preset-react": "^7.22.15",
         "@types/node": "^20.5.6",
+        "babel-jest": "^29.7.0",
         "dotenv-webpack": "^8.0.1",
+        "jest": "^27.5.1",
         "tailwindcss": "^3.1.8"
     }
 }
