--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "sass": "^1.54.8",
         "scss": "^0.2.4",
         "slick-carousel": "^1.8.1",
+        "socket.io-client": "^4.7.2",
         "stream": "^0.0.2",
         "styled-components": "^5.3.8",
         "toastify": "^2.0.1",
