--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@mui/icons-material": "^5.10.9",
         "@mui/material": "^5.10.9",
         "@react-oauth/google": "^0.11.1",
+        "@react-three/drei": "^9.86.3",
+        "@react-three/fiber": "^8.14.4",
         "@reduxjs/toolkit": "^1.9.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
@@ -70,6 +72,7 @@
         "socket.io-client": "^4.7.2",
         "stream": "^0.0.2",
         "styled-components": "^5.3.8",
+        "three": "^0.157.0",
         "toastify": "^2.0.1",
         "uuid": "^9.0.0",
         "v4": "^0.0.1",
