--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@react-oauth/google": "^0.11.1",
         "@react-three/drei": "^9.86.3",
         "@react-three/fiber": "^8.14.4",
+        "@react-three/postprocessing": "^2.15.1",
         "@reduxjs/toolkit": "^1.9.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
