--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-scroll-progress-bar": "^1.1.13",
         "react-simple-typewriter": "^5.0.1",
         "react-slick": "^0.29.0",
+        "react-tilt": "^1.0.2",
         "react-toastify": "^9.1.3",
         "redirect": "^0.2.0",
         "redux": "^4.2.0",
