--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.0",
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@fullcalendar/react": "^6.1.9",
         "@mui/icons-material": "^5.10.9",
         "@mui/material": "^5.10.9",
         "@mui/x-data-grid": "^6.17.0",
@@ -30,8 +31,10 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "firebase": "^9.10.0",
         "framer-motion": "^10.16.4",
+        "fullcalendar": "^6.1.9",
         "graphql": "^16.6.0",
         "graphql-tag": "^2.12.6",
+        "i": "^0.3.7",
         "i18next": "^23.5.1",
         "jquery": "^3.6.1",
         "jsonwebtoken": "^9.0.1",
@@ -39,12 +42,14 @@
         "material-ui-popup-state": "^5.0.4",
         "mysql": "^2.18.1",
         "nodemailer": "^6.9.3",
+        "npm": "^10.2.1",
         "prop-types": "^15.8.1",
         "query-string": "^7.1.1",
         "random-token": "^0.0.8",
         "react": "^18.2.0",
         "react-apollo": "^3.1.5",
         "react-bootstrap": "^2.5.0",
+        "react-calendar": "^4.6.1",
         "react-circular-progressbar": "^2.1.0",
         "react-dom": "^18.2.0",
         "react-elastic-carousel": "^0.11.5",
